objects/BMCServiceDesk__BMC_Monitor__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Display_Type__c</fullName>
        <label>Display Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiscan Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiscan Monochrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Frequency Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Frequency Monochrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Pixels_Per_X_Logical_Inch__c</fullName>
        <label>Pixels Per X Logical Inch</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Pixels_Per_Y_Logical_Inch__c</fullName>
        <label>Pixels Per Y Logical Inch</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Screen_Height__c</fullName>
        <label>Screen Height</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Screen_Width__c</fullName>
        <label>Screen Width</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>